sec11-assignment/02-mongo.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongo-db
spec:
  serviceName: mongo # specified for stateful set
  selector:  
    matchLabels:
       app: mongo-db
  replicas: 1
  template:
    metadata:
      labels:
        app: mongo-db
    spec:
      containers:
      - name: mongo-db
        image: mongo:4.4-focal
        ports:
        - containerPort: 27017
        volumeMounts:
        - name: mongo-data-volume
          mountPath: /docker-entrypoint-initdb.d 
        - name: mongo-storage
          mountPath: /data/db  
      volumes:
      - name: mongo-data-volume
        configMap:
          name: init-js
  volumeClaimTemplates:
  - metadata:
      name: mongo-storage
    spec:
      storageClassName: standard
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 1G                 
---
apiVersion: v1
kind : Service
metadata:
  name: mongo
spec:
  clusterIP: None
  selector:
    app: mongo-db
  ports:
  - port: 27017
    targetPort: 27017
