sec11-assignment/06-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-app
spec:
  selector:  
    matchLabels:
       app: frontend-app
  replicas: 1 
  template:
    metadata:
      labels:
        app: frontend-app
    spec:
      containers:
      - name: frontend
        image: vinsdocker/k8s-dice-frontend
        ports:
        - containerPort: 80    
        startupProbe: 
          httpGet:
            path: /
            port: 80
          periodSeconds: 1
          failureThreshold: 30   
        readinessProbe: 
          httpGet:
            path: /
            port: 80
          periodSeconds: 5
          failureThreshold: 3 
        resources:
          requests:
            cpu: 100m
            memory: 100Mi     
          limits:
            cpu: 1000m
            memory: 1000Mi 
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  selector:
    app: frontend-app
  ports:
  - port: 80
    targetPort: 80
